--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Porfolio</a></li>
-			<li><a href="#">More</a></li>
+			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html#">Home</a></li>
+			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">Portfolio</a></li>
+			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">More</a></li>
+
 		</ul>
 	</nav>
 </div>
 </header>
 
-<h1>Welcome to my World</h1>
+<h1>Home</h1>
 
 <div id="All">
 <div id="box1">
