--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <sub> My name is Sarah and I am a junior at James Campbell High school. My hobbies include crocheting, playing video games, and playing on my instrument, which is the alto saxophone. I am the youngest out of six kids and I was born and raised in Hawaii. I plan to be a radiologist when I grow up and I want to go to Baylor University.</sub>
 </div>
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/Sarah.jpg.jpg" alt="Sarah Image">
+<img src="sarahimage.jpg" /> 
 
 <div id="box2">
 <div id="background">
