--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<ul>
 			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html#">Home</a></li>
 			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">Portfolio</a></li>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">More</a></li>
+			<li><a href="more.html">More</a></li>
 
 		</ul>
 	</nav>
