--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 	<nav>
 		<ul>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html#">Home</a></li>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">Portfolio</a></li>
+			<div id="welcome">
+			<header>Welcome to my World</header></div>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="more.html">More</a></li>
 
 		</ul>
@@ -32,7 +34,7 @@
 <sub> My name is Sarah and I am a junior at James Campbell High school. My hobbies include crocheting, playing video games, and playing on my instrument, which is the alto saxophone. I am the youngest out of six kids and I was born and raised in Hawaii. I plan to be a radiologist when I grow up and I want to go to Baylor University.</sub>
 </div>
 
-<img src="sarahimage.jpg" /> 
+<img src="sarahimage.jpg" alt="Sarah Image">
 
 <div id="box2">
 <div id="background">
@@ -47,10 +49,20 @@
 <p class="first">My Activities</p>
 </div>
 <div id="since">
-<sub>Since elementary school, I did volleyball until middle school when I <br>decided to join band. I have been in band for almost 5 years now and I am <br>glad that I stayed. I picked up crocheting around sixth grade when i saw <br>my sister-in-law do it. It is now a habit and a good stress-reliever to me <br>and I enjoy it a lot. I play a lot of video games and I play them quite often. <br> I have a lot of gaming consoles and I have a lot of old school ones as well, <br>such as a Nintendo 64(N64) or a GameCube </sub>
+<sub>Since elementary school, I did volleyball until middle school when I <br>decided to join band. I have been in band for almost 5 years now and I am <br>glad that I stayed. I picked up crocheting around sixth grade when i saw <br>my sister-in-law do it. It is now a habit and a good stress-reliever to me <br>and I enjoy it a lot. I play a lot of video games and I play them quite often. <br> I have a lot of gaming consoles and I have a lot of old school ones as well, <br>such as a Nintendo 64(N64) or a GameCube. </sub>
 </div>
 </div>
 </div>
 
+<div id="contain">
+	<div id="main">
+	</div>
+</div>
+
+<footer id="footer">
+	
+</footer>
+
 </body>
 </html>
+
