--- a/portfolio.html
+++ b/portfolio.html
@@ -13,41 +13,47 @@
 
 	<nav>
 		<ul>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html#">Home</a></li>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">Portfolio</a></li>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">More</a></li>
+			<div id="welcome">
+			<header>Welcome to my World</header></div>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="more.html">More</a></li>
 		</ul>
 	</nav>
 </div>
 </header>
 
+<div id="tophead">
 <h1>Portfolio</h1>
+	<div id="passgenpro">
+	<sub> Password Generator Project</sub>
+</div>
+	</div>
 
 <div id="All">
 <div id="box1">
 
-<p class="first">Summary About Me</p>
-
-<sub> My name is Sarah and I am a junior at James Campbell High school. My hobbies include crocheting, playing video games, and playing on my instrument, which is the alto saxophone. I am the youngest out of six kids and I was born and raised in Hawaii. I plan to be a radiologist when I grow up and I want to go to Baylor University.</sub>
+<div class="passgen">
+<center>	<embed src="file:///C:/Users/Sarah/Desktop/APCOM-coding/Password%20Generator%20Project%20-%20Sarah%20Hart,%20Zackry%20Ulep.pdf" type="application/pdf" width=100% height="600px"> </center>
 </div>
 
-<div id="box2">
-<div id="background">
-<p class="first">Background</p>
-
-<sub>Growing up in Hawaii, on the island of Oahu, I moved a lot and even stayed in Georgia for sometime until I was five and stayed in Waipahu for two years. Afterwards, I moved to Ewa Beach in 2011 and have been staying here for almost nine years now. I am the youngest out of six kids and I am currently living with my mom and brother. </sub>
-</div>
+<div id="firstsub">
+<sub> In this assignment, me and another one of my classmates, had to create an algorithm for a password generator. Basically, for any website, our objective was to be able to be able to create a set of rules for a specific password that is unique and can only be used to that specific password.</sub>
 </div>
 
-<div id="myactive">
-<div id="box3">
-<p class="first">My Activities</p>
 </div>
-<div id="since">
-<sub>Since elementary school, I did volleyball until middle school when I <br>decided to join band. I have been in band for almost 5 years now and I am <br>glad that I stayed. I picked up crocheting around sixth grade when i saw <br>my sister-in-law do it. It is now a habit and a good stress-reliever to me <br>and I enjoy it a lot. I play a lot of video games and I play them quite often. <br> I have a lot of gaming consoles and I have a lot of old school ones as well, <br>such as a Nintendo 64(N64) or a GameCube </sub>
+
+<div id="contain">
+	<div id="main">
+	</div>
 </div>
+
+<footer id="footer">
+	
+</footer>
+
 </div>
-</div>
+
 
 </body>
 </html>
