--- a/more.html
+++ b/more.html
@@ -13,8 +13,10 @@
 
 	<nav>
 		<ul>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html#">Home</a></li>
-			<li><a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">Portfolio</a></li>
+			<div id="welcome">
+			<header>Welcome to my World</header></div>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="more.html">More</a></li>
 		</ul>
 	</nav>
@@ -26,16 +28,16 @@
 <div id="All">
 <div id="box1">
 
-<p class="first">Video Games</p>
+<p class="first">Band</p>
 
-<sub> My name is Sarah and I am a junior at James Campbell High school. My hobbies include crocheting, playing video games, and playing on my instrument, which is the alto saxophone. I am the youngest out of six kids and I was born and raised in Hawaii. I plan to be a radiologist when I grow up and I want to go to Baylor University.</sub>
+<sub>In seventh grade, I joined band because I didn't want to join the other classes and I didn't know that I would eventualy stay in it and make amazing memories. I joined marching band my freshman year and made even more friends and memories. I didn't plan to stay in band this long, but I did and I don't regret anything.</sub>
 </div>
 
 <div id="box2">
 <div id="background">
-<p class="first">Background</p>
+<p class="first">Video Games</p>
 
-<sub>Growing up in Hawaii, on the island of Oahu, I moved a lot and even stayed in Georgia for sometime until I was five and stayed in Waipahu for two years. Afterwards, I moved to Ewa Beach in 2011 and have been staying here for almost nine years now. I am the youngest out of six kids and I am currently living with my mom and brother. </sub>
+<sub>  </sub>
 </div>
 </div>
 
@@ -48,6 +50,15 @@
 </div>
 </div>
 </div>
+
+<div id="contain">
+	<div id="main">
+	</div>
+</div>
+
+<footer id="footer">
+
+</footer>
 
 </body>
 </html>
