--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 <div id="box1">
 
 <div class="passgen">
-<center>	<embed src="file:///C:/Users/Sarah/Desktop/APCOM-coding/Password%20Generator%20Project%20-%20Sarah%20Hart,%20Zackry%20Ulep.pdf" type="application/pdf" width=100% height="600px"> </center>
+<center>	<embed src="passgen.pdf" type="application/pdf" width=100% height="600px"> </center>
 </div>
 
 <div id="firstsub">
