--- a/index.html
+++ b/index.html
@@ -34,7 +34,29 @@
 <sub> My name is Sarah and I am a junior at James Campbell High school. My hobbies include crocheting, playing video games, and playing on my instrument, which is the alto saxophone. I am the youngest out of six kids and I was born and raised in Hawaii. I plan to be a radiologist when I grow up and I want to go to Baylor University.</sub>
 </div>
 
-<img src="sarahimage.jpg" alt="Sarah Image">
+
+<img src="sarahimage.jpg" class="sarah" />
+
+
+<img src="bandgroup.jpg" class="marchgroup">
+<style>
+	.marchgroup {
+		size: width:320px; height:320px;
+	position:absolute;
+	bottom: 220px;
+	right: 300px;
+	}
+</style>
+
+<img src="band19.jpg" class="march19">
+<style>
+	.march19 {
+		size: width:320px; height:320px;
+	position:absolute;
+	bottom: -30px;
+	right: 80px;
+	}
+</style>
 
 <div id="box2">
 <div id="background">
@@ -60,7 +82,16 @@
 </div>
 
 <footer id="footer">
-	
+
+<center><div id="socialmediaicons">
+<a href="https://twitter.com/ohdontdoitman?lang=en">
+<img src="twitter.png">
+</a>
+<a href="https://www.instagram.com/sarahhharttt/">
+<img src="instagram.png">
+</a>
+</div>
+
 </footer>
 
 </body>
