--- a/more.html
+++ b/more.html
@@ -58,6 +58,15 @@
 
 <footer id="footer">
 
+<center><div id="socialmediaicons">
+<a href="https://twitter.com/ohdontdoitman?lang=en">
+<img src="twitter.png">
+</a>
+<a href="https://www.instagram.com/sarahhharttt/">
+<img src="instagram.png">
+</a>
+</div>
+
 </footer>
 
 </body>
