--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<html>
+</body><html>
 <head>
 	<title>Welcome to my World</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
@@ -43,6 +43,8 @@
 
 </div>
 
+</div>
+
 <div id="contain">
 	<div id="main">
 	</div>
@@ -50,10 +52,17 @@
 
 <footer id="footer">
 	
+<center><div id="socialmediaicons">
+<a href="https://twitter.com/ohdontdoitman?lang=en">
+<img src="twitter.png">
+</a>
+<a href="https://www.instagram.com/sarahhharttt/">
+<img src="instagram.png">
+</a>
+</div>
+	
 </footer>
 
-</div>
-
-
 </body>
+</html>
 </html>
