--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,10 @@
 
 </div>
 
+<div class="blowntobits">
+<center>	<embed src="sarahblowntobits.pdf" type="application/pdf" width=100% height="600px"> </center>
+</div>
+	
 </div>
 
 <div id="contain">
