--- a/portfolio.html
+++ b/portfolio.html
@@ -40,13 +40,8 @@
 <div id="firstsub">
 <sub> In this assignment, me and another one of my classmates, had to create an algorithm for a password generator. Basically, for any website, our objective was to be able to be able to create a set of rules for a specific password that is unique and can only be used to that specific password.</sub>
 </div>
-
-</div>
-
-<div class="blowntobits">
-<center>	<embed src="sarahblowntobits.pdf" type="application/pdf" width=100% height="600px"> </center>
-</div>
 	
+</div
 </div>
 
 <div id="contain">
