--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <html>
 <head>
 	<title>Welcome to my World</title>
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
 
 
-<body>
-
-<header>
-	<div class="container">
-
-	<nav>
-		<ul>
-			<div id="welcome">
-			<header>Welcome to my World</header></div>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="more.html">More</a></li>
-
-		</ul>
-	</nav>
+	<body>
+	<header class="welcome">Welcome to my World</header>
+<div class="containsss">
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<button class="btnn btnn1">HOME</button>
+	</a>
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<button class="btnn btnn2">PORTFOLIO</button>
+	</a>
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<button class="btnn btnn3">MORE</button>
+	</a>
 </div>
-</header>
+	</body>
+
 
 <h1>Home</h1>
 
@@ -35,20 +35,20 @@
 </div>
 
 
-<img src="sarahimage.jpg" class="sarah" />
+<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/sarahimage.jpg" class="sarah" />
 
 
-<img src="bandgroup.jpg" class="marchgroup">
+<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/bandgroup.jpg" class="marchgroup">
 <style>
 	.marchgroup {
 		size: width:320px; height:320px;
 	position:absolute;
 	bottom: 220px;
-	right: 300px;
+	right: 290px;
 	}
 </style>
 
-<img src="band19.jpg" class="march19">
+<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/band19.jpg" class="march19">
 <style>
 	.march19 {
 		size: width:320px; height:320px;
@@ -81,18 +81,17 @@
 	</div>
 </div>
 
-<footer id="footer">
 
-<center><div id="socialmediaicons">
-<a href="https://twitter.com/ohdontdoitman?lang=en">
-<img src="twitter.png">
-</a>
-<a href="https://www.instagram.com/sarahhharttt/">
-<img src="instagram.png">
-</a>
+
+<div class="botainer">
+	<a href="https://www.instagram.com/sarahhharttt/">
+	<button class="btn btn1"><img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/twitter.png"></button>
+	</a>
+	<a href="https://twitter.com/ohdontdoitman?lang=en">
+	<button class="btn btn2"><img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/instagram.png"></button>
+	</a>
 </div>
 
-</footer>
 
 </body>
 </html>
