--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,27 @@
-</body><html>
+<html>
 <head>
 	<title>Welcome to my World</title>
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
 
 
 <body>
-
-<header>
-	<div class="container">
-
-	<nav>
-		<ul>
-			<div id="welcome">
-			<header>Welcome to my World</header></div>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="more.html">More</a></li>
-		</ul>
-	</nav>
+	<header class="welcome">Welcome to my World</header>
+<div class="containsss">
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<button class="btnn btnn1">HOME</button>
+	</a>
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<button class="btnn btnn2">PORTFOLIO</button>
+	</a>
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<button class="btnn btnn3">MORE</button>
+	</a>
 </div>
-</header>
+	</body>
 
 <div id="tophead">
 <h1>Portfolio</h1>
@@ -34,14 +34,15 @@
 <div id="box1">
 
 <div class="passgen">
-<center>	<embed src="passgen.pdf" type="application/pdf" width=100% height="600px"> </center>
+<center>	<embed src="file:///C:/Users/Sarah/Desktop/APCOM-coding/Password%20Generator%20Project%20-%20Sarah%20Hart,%20Zackry%20Ulep.pdf" type="application/pdf" width=100% height="600px"> </center>
 </div>
 
 <div id="firstsub">
 <sub> In this assignment, me and another one of my classmates, had to create an algorithm for a password generator. Basically, for any website, our objective was to be able to be able to create a set of rules for a specific password that is unique and can only be used to that specific password.</sub>
 </div>
-	
-</div
+
+</div>
+
 </div>
 
 <div id="contain">
@@ -49,19 +50,7 @@
 	</div>
 </div>
 
-<footer id="footer">
-	
-<center><div id="socialmediaicons">
-<a href="https://twitter.com/ohdontdoitman?lang=en">
-<img src="twitter.png">
-</a>
-<a href="https://www.instagram.com/sarahhharttt/">
-<img src="instagram.png">
-</a>
-</div>
-	
-</footer>
+
 
 </body>
-</html>
 </html>
