--- a/more.html
+++ b/more.html
@@ -10,18 +10,30 @@
 
 <header>
 	<div class="container">
+<html>
+<head>
+	<title>Welcome to my World</title>
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="style.css" type="text/css" />
+</head>
 
-	<nav>
-		<ul>
-			<div id="welcome">
-			<header>Welcome to my World</header></div>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="more.html">More</a></li>
-		</ul>
-	</nav>
+
+
+<body>
+	<header class="welcome">Welcome to my World</header>
+<div class="containsss">
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<button class="btnn btnn1">HOME</button>
+	</a>
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<button class="btnn btnn2">PORTFOLIO</button>
+	</a>
+	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<button class="btnn btnn3">MORE</button>
+	</a>
 </div>
-</header>
+	</body>
 
 <h1>More</h1>
 
@@ -56,18 +68,6 @@
 	</div>
 </div>
 
-<footer id="footer">
-
-<center><div id="socialmediaicons">
-<a href="https://twitter.com/ohdontdoitman?lang=en">
-<img src="twitter.png">
-</a>
-<a href="https://www.instagram.com/sarahhharttt/">
-<img src="instagram.png">
-</a>
-</div>
-
-</footer>
 
 </body>
 </html>
