--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<body>
 	<header class="welcome">Welcome to my World</header>
 <div class="containsss">
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<a href="index.html">
 	<button class="btnn btnn1">HOME</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<a href="portfolio.html">
 	<button class="btnn btnn2">PORTFOLIO</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<a href="more.html">
 	<button class="btnn btnn3">MORE</button>
 	</a>
 </div>
@@ -35,10 +35,10 @@
 </div>
 
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/sarahimage.jpg" class="sarah" />
+<img src="sarahimage.jpg" class="sarah" />
 
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/bandgroup.jpg" class="marchgroup">
+<img src="bandgroup.jpg" class="marchgroup">
 <style>
 	.marchgroup {
 		size: width:320px; height:320px;
@@ -48,7 +48,7 @@
 	}
 </style>
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/band19.jpg" class="march19">
+<img src="band19.jpg" class="march19">
 <style>
 	.march19 {
 		size: width:320px; height:320px;
@@ -85,10 +85,10 @@
 
 <div class="botainer">
 	<a href="https://www.instagram.com/sarahhharttt/">
-	<button class="btn btn1"><img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/twitter.png"></button>
+	<button class="btn btn1"><img src="twitter.png"></button>
 	</a>
 	<a href="https://twitter.com/ohdontdoitman?lang=en">
-	<button class="btn btn2"><img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/instagram.png"></button>
+	<button class="btn btn2"><img src="instagram.png"></button>
 	</a>
 </div>
 
