--- a/more.html
+++ b/more.html
@@ -23,13 +23,13 @@
 <body>
 	<header class="welcome">Welcome to my World</header>
 <div class="containsss">
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<a href="index.html">
 	<button class="btnn btnn1">HOME</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<a href="portfolio.html">
 	<button class="btnn btnn2">PORTFOLIO</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<a href="more.html">
 	<button class="btnn btnn3">MORE</button>
 	</a>
 </div>
