--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,13 @@
 <body>
 	<header class="welcome">Welcome to my World</header>
 <div class="containsss">
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<a href="index.html">
 	<button class="btnn btnn1">HOME</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<a href="portfolio.html">
 	<button class="btnn btnn2">PORTFOLIO</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<a href="more.html">
 	<button class="btnn btnn3">MORE</button>
 	</a>
 </div>
@@ -34,7 +34,7 @@
 <div id="box1">
 
 <div class="passgen">
-<center>	<embed src="file:///C:/Users/Sarah/Desktop/APCOM-coding/Password%20Generator%20Project%20-%20Sarah%20Hart,%20Zackry%20Ulep.pdf" type="application/pdf" width=100% height="600px"> </center>
+<center>	<embed src="sarahblowntobits.pdf" type="application/pdf" width=100% height="600px"> </center>
 </div>
 
 <div id="firstsub">
