--- a/more.html
+++ b/more.html
@@ -23,6 +23,7 @@
 <body>
 	<header class="welcome">Welcome to my World</header>
 <div class="containsss">
+</body>
 	<a href="index.html">
 	<button class="btnn btnn1">HOME</button>
 	</a>
