--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
 <img src="bandgroup.jpg" class="marchgroup">
 <style>
 	.marchgroup {
-		size: width:320px; height:320px;
+		size: width:360px; height:360px;
 	position:absolute;
-	bottom: 220px;
-	right: 290px;
+	bottom: 150px;
+	right: 160px;
 	}
 </style>
 
 <img src="band19.jpg" class="march19">
 <style>
 	.march19 {
-		size: width:320px; height:320px;
+		size: width:360px; height:360px;
 	position:absolute;
-	bottom: -30px;
-	right: 80px;
+	top: 770px;
+	right: 550px;
 	}
 </style>
 
@@ -62,7 +62,7 @@
 <div id="background">
 <p class="first">Background</p>
 
-<sub>Growing up in Hawaii, on the island of Oahu, I moved a lot and even stayed in Georgia for sometime until I was five and stayed in Waipahu for two years. Afterwards, I moved to Ewa Beach in 2011 and have been staying here for almost nine years now. I am the youngest out of six kids and I am currently living with my mom and brother. </sub>
+<sub>Growing up in Hawaii, on the island of Oahu, I moved a lot and even stayed in Georgia for sometime until I was five and stayed in Waipahu for two years. Afterwards, I moved to Ewa Beach in 2011 and have been staying here for almost nine years now. </sub>
 </div>
 </div>
 
