--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 <div id="box1">
 
 <div class="passgen">
-<center>	<embed src="passgen.pdf" type="application/pdf" width=100% height="600px"> </center>
+<center>	<embed src="passgen.pdf" type="application/pdf" width=100% height="630px"> </center>
 </div>
 
 <div id="firstsub">
@@ -43,6 +43,19 @@
 
 </div>
 
+<div class="blowntobits">
+	<center><embed src="sarahblowntobits.pdf" type="application/pdf" width=46% height="600px"> </center>
+</div>
+
+<div id="blowntobitspro">
+	<sub> Blown to Bits Chapter 6 Project</sub>
+
+</div>
+
+<div id="boxsubfor6">
+<div id="secondsub">
+<sub> In this assignment, me and my some of my classmates had to read a chapter and present what the chapter was about. </sub>
+</div>
 </div>
 
 <div id="contain">
