--- a/more.html
+++ b/more.html
@@ -1,18 +1,6 @@
 <html>
 <head>
 	<title>Welcome to my World</title>
-		<link rel="stylesheet" href="style.css" type="text/css" />
-</head>
-
-
-
-<body>
-
-<header>
-	<div class="container">
-<html>
-<head>
-	<title>Welcome to my World</title>
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" type="text/css" />
@@ -22,8 +10,8 @@
 
 <body>
 	<header class="welcome">Welcome to my World</header>
-<div class="containsss">
 </body>
+<div class="containsss">
 	<a href="index.html">
 	<button class="btnn btnn1">HOME</button>
 	</a>
@@ -41,27 +29,60 @@
 <div id="All">
 <div id="box1">
 
-<p class="first">Band</p>
+<p class="first">Random Facts About Me</p>
 
-<sub>In seventh grade, I joined band because I didn't want to join the other classes and I didn't know that I would eventualy stay in it and make amazing memories. I joined marching band my freshman year and made even more friends and memories. I didn't plan to stay in band this long, but I did and I don't regret anything.</sub>
+<sub><li>I hate tomatoes</li> <li>On my mom's side, I have five siblings and on my dad's side, I have three siblings so I actually have eight siblings</li> <li>I did ballet, gymnastics, dance, singing and guitar lessons, and I quit all of them. The longest that I stayed in was singing lessons</li> <li>I am named after my grandma (Sarah Elizabeth Hart)</li></sub>
+</div>
+
+<div class="yayfamily">
+<img src="yayfamily.gif">
 </div>
 
 <div id="box2">
-<div id="background">
 <p class="first">Video Games</p>
-
-<sub>  </sub>
-</div>
+<sub>I play on my xbox mostly (gt: sarharadesert) and the main games I like to play include Tom Clancy's Rainbow Six Siege, Overwatch, Apex Legends, and Mortal Kombat 11. Sometimes I'll play Fortnite, Minecraft, and Sea of Thieves. </sub>
 </div>
 
-<div id="myactive">
-<div id="box3">
-<p class="first">My Activities</p>
+<div class="botainer">
+	<div id="xboxicon">
+	<a href="https://account.xbox.com/en-us/profile?gamertag=SarharaDesert">
+	<button class="btn btn1"><img src="xboxicon.png"></button>
+	</a>
+	</div>
 </div>
-<div id="since">
-<sub>Since elementary school, I did volleyball until middle school when I <br>decided to join band. I have been in band for almost 5 years now and I am <br>glad that I stayed. I picked up crocheting around sixth grade when i saw <br>my sister-in-law do it. It is now a habit and a good stress-reliever to me <br>and I enjoy it a lot. I play a lot of video games and I play them quite often. <br> I have a lot of gaming consoles and I have a lot of old school ones as well, <br>such as a Nintendo 64(N64) or a GameCube </sub>
-</div>
-</div>
+
+
+<img src="rainbowsix.jpg" class="rainbowsix">
+<style> .rainbowsix {
+		width: 550px;
+		height: 320px;
+		position: relative;
+		bottom: 300px;
+		left: 20px;
+}
+</style>
+
+<img src="mk11.jpg" class="mk11">
+<style> .mk11 {
+		width: 500px;
+		height: 300px;
+		position: relative;
+		bottom: 450px;
+		left: 100px;
+}
+</style>
+
+<img src="seaofthieves.jpg" class="seaofthieves">
+<style> .seaofthieves {
+		width: 500px;
+		height: 275px;
+		position: relative;
+		bottom: 430px;
+		left: 620px;
+
+}
+</style>
+
 </div>
 
 <div id="contain">
