--- a/more.html
+++ b/more.html
@@ -12,13 +12,13 @@
 	<header class="welcome">Welcome to my World</header>
 </body>
 <div class="containsss">
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/index.html">
+	<a href="index.html">
 	<button class="btnn btnn1">HOME</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/portfolio.html">
+	<a href="portfolio.html">
 	<button class="btnn btnn2">PORTFOLIO</button>
 	</a>
-	<a href="file:///C:/Users/Sarah/Desktop/APCOM-coding/more.html">
+	<a href="more.html">
 	<button class="btnn btnn3">MORE</button>
 	</a>
 </div>
@@ -35,7 +35,7 @@
 </div>
 
 <div class="yayfamily">
-<img src="file:///C:/Users/Sarah/OneDrive/Documents/MOMS%20FOLDER/yayfamily.gif">
+<img src="yayfamily.gif">
 </div>
 <style> .yayfamily {
 
@@ -55,13 +55,13 @@
 <div class="botainer">
 	<div id="xboxicon">
 	<a href="https://account.xbox.com/en-us/profile?gamertag=SarharaDesert">
-	<button class="btn btn1"><img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/xboxicon.png"></button>
+	<button class="btn btn1"><img src="xboxicon.png"></button>
 	</a>
 	</div>
 </div>
 
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/rainbowsix.jpg" class="rainbowsix">
+<img src="rainbowsix.jpg" class="rainbowsix">
 <style> .rainbowsix {
 		width: 550px;
 		height: 320px;
@@ -71,7 +71,7 @@
 }
 </style>
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/mk11.jpg" class="mk11">
+<img src="mk11.jpg" class="mk11">
 <style> .mk11 {
 		width: 500px;
 		height: 300px;
@@ -81,7 +81,7 @@
 }
 </style>
 
-<img src="file:///C:/Users/Sarah/Desktop/APCOM-coding/seaofthieves.jpg" class="seaofthieves">
+<img src="seaofthieves.jpg" class="seaofthieves">
 <style> .seaofthieves {
 		width: 500px;
 		height: 275px;
