--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
 <div class="botainer">
-	<a href="https://twitter.com/ohdontdoitman?lang=en">
+	<a href="https://twitter.com/sarahhharttt">
 	<button class="btn btn1"><img src="twitter.png"></button>
 	</a>
 	<a href="https://www.instagram.com/sarahhharttt/">
