--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Welcome to my World</title>
+	<title>Welcome to my World</title> <!-- In this section, I had to link the font styles so that my website can "find" where to use the font when I use them for certain parts  -->
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quattrocento&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" type="text/css" />
@@ -8,7 +8,7 @@
 
 
 
-	<body>
+	<body> <!-- In this section, this is my nav bar. I techincally don't have a nav bar because I wanted to do something different to make it more interesting. Even though I do not have a nav bar, it still directs you to my other html pages. -->
 	<header class="welcome">Welcome to my World</header>
 <div class="containsss">
 	<a href="index.html">
@@ -26,14 +26,15 @@
 
 <h1>Home</h1>
 
-<div id="All">
-<div id="box1">
+<div id="All"> <!-- this "All" divider that I have here basically is just used to push all of my content down a bit to make space for the title -->
+<div id="box1"> <!-- In all of the paragraphs, I have these "boxes" which is basically there to position them in a certain way on the website -->
 
 <p class="first">Summary About Me</p>
 
 <sub> My name is Sarah and I am a junior at James Campbell High school. My hobbies include crocheting, playing video games, and playing on my instrument, which is the alto saxophone. I am the youngest out of six kids and I was born and raised in Hawaii. I plan to be a radiologist when I grow up and I want to go to Baylor University.</sub>
 </div>
 
+<!-- I used the "img" tags to input my pictures for my files and I styled them on the html file instead of the css file because for some reason, when I would try to style one of the pictures, it would interfer with the other pictures so I decided to put them in the html file because it didn't interact with each other. -->
 
 <img src="sarahimage.jpg" class="sarah" />
 
@@ -82,7 +83,7 @@
 </div>
 
 
-
+<!-- In <div class="botainer", I have my social media there and they are in button tags so that you can click on them and it will direct you my actual social media sites. -->
 <div class="botainer">
 	<a href="https://twitter.com/sarahhharttt">
 	<button class="btn btn1"><img src="twitter.png"></button>
