--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,10 @@
 </div>
 </div>
 
+<div id="scratch">
+	<iframe src="https://scratch.mit.edu/projects/332801441/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>	
+	
 <div id="contain">
 	<div id="main">
 	</div>
