--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 	<iframe src="https://scratch.mit.edu/projects/332801441/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
-<div> id="earsketch">
+<div id="earsketch">
 	<iframe width="600" height="400" src="https://earsketch.gatech.edu/earsketch2/#?sharing=GaPHgEq5YFHG3uqETxzEyw&embedded=true"></iframe>
 </div>
 	
