--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,15 @@
 </div>
 </div>
 
+<div id="scratchgamepro">
+	<sub> Scratch Game Project </sub>
+
 <div id="scratch">
 	<iframe src="https://scratch.mit.edu/projects/332801441/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
+
+<div id="thirdsub">
+	<sub> In this assignment, we were to create a story or game using a program called Scratch. Scratch provided coding blocks that we had to use in order to create our game or story.</sub>
 </div>
 
 <div id="earsketch">
