--- a/portfolio.html
+++ b/portfolio.html
@@ -65,13 +65,20 @@
 	<iframe src="https://scratch.mit.edu/projects/332801441/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
+<div id="thirdsubbox">
 <div id="thirdsub">
 	<sub> In this assignment, we were to create a story or game using a program called Scratch. Scratch provided coding blocks that we had to use in order to create our game or story.</sub>
+</div>
+</div>
+
+<div id="earsketchpro">
+	<sub>EarSketch Project</sub>
 </div>
 
 <div id="earsketch">
 	<iframe width="600" height="400" src="https://earsketch.gatech.edu/earsketch2/#?sharing=GaPHgEq5YFHG3uqETxzEyw&embedded=true"></iframe>
 </div>
+	
 	
 <div id="contain">
 	<div id="main">
